--- a/infra/docker/grafana-serverless/provisioning/datasources/datasources.yml
+++ b/infra/docker/grafana-serverless/provisioning/datasources/datasources.yml
@@ -1,25 +1,13 @@
 apiVersion: 1
 
 datasources:
-  - name: Athena-DynamoDB
-    type: grafana-athena-datasource
-    access: proxy
-    uid: athena-dynamodb
-    isDefault: true
-    jsonData:
-      authType: default
-      catalog: AwsDataCatalog
-      database: ${ATHENA_DATABASE}
-      defaultRegion: ${AWS_REGION}
-      workgroup: ${ATHENA_WORKGROUP}
-    editable: true
-
   - name: CloudWatch
     type: cloudwatch
     access: proxy
     uid: cloudwatch
+    isDefault: true
     jsonData:
       authType: default
-      defaultRegion: ${AWS_REGION}
+      defaultRegion: eu-west-3
     editable: true
 
