Correction destruction bucket grafana serverless

--- a/.github/workflows/destroy-grafana-serverless.yml
+++ b/.github/workflows/destroy-grafana-serverless.yml
@@ -66,27 +66,37 @@ jobs:
           echo "🗑️ Emptying S3 bucket $BUCKET..."
           
           # Check if bucket exists
-          if aws s3api head-bucket --bucket "$BUCKET" 2>/dev/null; then
-            # Delete all objects
+          if aws s3api head-bucket --bucket "$BUCKET" --region $REGION 2>/dev/null; then
+            echo "📦 Bucket exists, proceeding with cleanup..."
+            
+            # Delete all objects (simple method)
             aws s3 rm s3://$BUCKET --recursive --region $REGION || true
             
             # Delete all versions (if versioning enabled)
+            echo "🔄 Deleting object versions..."
             aws s3api list-object-versions \
               --bucket $BUCKET \
               --region $REGION \
-              --query 'Versions[].{Key:Key,VersionId:VersionId}' \
-              --output json | \
-            jq -r '.[] | "--key \(.Key) --version-id \(.VersionId)"' | \
-            xargs -I {} aws s3api delete-object --bucket $BUCKET --region $REGION {} || true
+              --output json 2>/dev/null | \
+            jq -r '.Versions[]? | "--key \"" + .Key + "\" --version-id \"" + .VersionId + "\""' | \
+            while read -r args; do
+              if [ -n "$args" ]; then
+                eval aws s3api delete-object --bucket $BUCKET --region $REGION $args || true
+              fi
+            done
             
             # Delete all delete markers
+            echo "🗑️ Deleting delete markers..."
             aws s3api list-object-versions \
               --bucket $BUCKET \
               --region $REGION \
-              --query 'DeleteMarkers[].{Key:Key,VersionId:VersionId}' \
-              --output json | \
-            jq -r '.[] | "--key \(.Key) --version-id \(.VersionId)"' | \
-            xargs -I {} aws s3api delete-object --bucket $BUCKET --region $REGION {} || true
+              --output json 2>/dev/null | \
+            jq -r '.DeleteMarkers[]? | "--key \"" + .Key + "\" --version-id \"" + .VersionId + "\""' | \
+            while read -r args; do
+              if [ -n "$args" ]; then
+                eval aws s3api delete-object --bucket $BUCKET --region $REGION $args || true
+              fi
+            done
             
             echo "✅ S3 bucket emptied"
           else
