Ajout de MKDOCS

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,20 @@ Thumbs.db
 .env
 .env.local
 
+# Generated site
+site/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.venv/
+
+# MkDocs
+.cache/
+
+
